--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+table{
+	border-collapse: collapse;
+	width: 100px;
+}
+
+#1{
+	color: white;
+	background-color: rgba(192, 80, 77, 1);
+}
+
