--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ table{
 	border-collapse: collapse;
 	width: 500px;
 	border: 1px solid black;
+	font-family: sans-serif;
+	font-weight: 50px;
 }
 #head1{
 	align: left;
