--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,12 @@
-/* Your CSS Code here. */
 table{
 	border-collapse: collapse;
-	width: 500px;
 	border: 1px solid black;
 	font-family: sans-serif;
 	font-weight: 50px;
+    width: 100%;
 }
-#head1{
-	align: left;
-}
-
 #head{
+	text-align: left;
 	color: white;
 	background-color: rgba(192, 80, 77, 1);
 }
