--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ table{
 	font-weight: 50px;
     width: 100%;
 }
+/* 
 #head{
 	text-align: left;
 	color: white;
@@ -21,3 +22,4 @@ table{
 #four{
 	background-color: rgba(217, 217, 217, 1);
 }
+ */
